# mi-blockchain-con-rust

./: .gitignore  Blockchain en Rust con Transacciones.markdown  Cargo.toml  Guía para Crear un Blockchain Simple en Rust.markdown  README.md  blockchain.json  index.html
.github/workflows/: ci.yml
src/: .lib.rs.swp  block.rs  blockchain.rs  lib.rs  main.rs
